--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.metroidvania.movement": "https://github.com/Geraldclarkaudio/MetroidvaniaMovementPackage.git",
     "com.unity.2d.animation": "9.0.4",
     "com.unity.2d.aseprite": "1.0.1",
     "com.unity.2d.pixel-perfect": "5.0.3",
