--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.metroidvania.movement": "https://github.com/Geraldclarkaudio/MetroidvaniaMovementPackage.git",
+    "com.metroidvania.movement": "file:C:/Users/Gerald/Desktop/Unity Projects/Packages/Metroidvania_Movement_Package/Assets/MetroidvaniaMovement",
     "com.unity.2d.animation": "9.0.4",
     "com.unity.2d.aseprite": "1.0.1",
     "com.unity.2d.pixel-perfect": "5.0.3",
