--- a/Assets/Scripts/MetroidvaniaMonth22.asmdef
+++ b/Assets/Scripts/MetroidvaniaMonth22.asmdef
@@ -1,9 +1,9 @@
 {
-    "name": "EvilElephantGames.MetroidvaniaMovement.runtime",
+    "name": "MetroidvaniaMonth22",
     "rootNamespace": "",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:516ace2320046734d8ab8a56b874ad2a"
+        "GUID:2f107335ad751bf4381bfc570350e678"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
